Fixes for comments on #1065 (#1117)
* wip

* move address removal to background

* update search placeholder to accept address

* show address card on confirm delete

* remove unused layout calculation scripts

* changed confirm message on address access removal

* change prompt for no access (+2 squashed commits)
Squashed commits:
[6c1f848a] remove search functionality
[1a68920e] wip

* revert tsconfig change

* add icon to website, update wordings

* search placeholder correction

* get rid of layout scripts

* updated descriptions and spacing

* Use address card throughout web access UI (#1118)

* create addressbook context

* use bigaddress and small address card

--- a/app/css/interceptor.css
+++ b/app/css/interceptor.css
@@ -56,7 +56,7 @@ body { font-family: "Inter" !important; }
 	--modal-background-color: rgba(10, 10, 10, .7)
 }
 
-:where(svg[role=img], figure > img) { display: block }
+:where(svg[role=img], figure > svg, figure > img) { display: block }
 
 data {
 	font: normal 1em "Inter";
@@ -1176,7 +1176,6 @@ summary:where(details[open] > *) {
 	white-space: nowrap;
 	text-overflow: ellipsis;
 	overflow: hidden;
-	contain: inline-size;
 	display: block;
 }
 
@@ -1307,7 +1306,6 @@ fieldset label:has([type=radio]:checked):before {
 	.layout {
 		--grid-col: var(--grid-column, 2);
 		--line-color: #505050;
-		--header-height: 0px;
 		display: grid;
 		grid-column: var(--grid-col);
 		min-height: 100vh;
